using less, obviously

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -9,11 +9,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?-i0uprb');
-  src:url('fonts/icomoon.eot?#iefix-i0uprb') format('embedded-opentype'),
-    url('fonts/icomoon.woff?-i0uprb') format('woff'),
-    url('fonts/icomoon.ttf?-i0uprb') format('truetype'),
-    url('fonts/icomoon.svg?-i0uprb#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?-i0uprb');
+  src:url('../fonts/icomoon.eot?#iefix-i0uprb') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-i0uprb') format('woff'),
+    url('../fonts/icomoon.ttf?-i0uprb') format('truetype'),
+    url('../fonts/icomoon.svg?-i0uprb#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
