code page setup, hero images abstracted to directive, front and back end data services created

--- a/public/stylesheets/includes/_var.less
+++ b/public/stylesheets/includes/_var.less
@@ -1,3 +1,4 @@
 @colorWhite: rgb(255, 255, 255); // #fff
 @colorBlack: rgb(0, 0, 0); // #000
 @colorGray: rgb(51, 51, 51); // #666;
+@colorGrayOpaque: rgba(51, 51, 51, 0.4); // #666 opacity: 0.4
