--- a/public/stylesheets/partials/_links.less
+++ b/public/stylesheets/partials/_links.less
@@ -12,28 +12,29 @@ a {
 
     &:hover {
       color: @colorBlack;
+      background-color: @colorGrayOpaque;
     }
   }
 
   &.code {
     &:hover {
-      color: @colorWhite;
-      background-image: url("../images/code/frame-bg.gif");
+      //color: @colorWhite;
+      //background-image: url("../images/code/frame-bg.gif");
       background-size: 100%;
     }
   }
 
   &.art {
     &:hover {
-      color: @colorWhite;
-      background-image: url("../images/art/frame-bg.png");
+      //color: @colorWhite;
+      //background-image: url("../images/art/frame-bg.png");
       background-size: 100%;
     }
   }
 
   &.life {
     &:hover {
-      background-image: url("../images/life/frame-bg.png");
+      //background-image: url("../images/life/frame-bg.png");
       background-size: 100%;
     }
   }
