--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -1,9 +1,8 @@
 body {
   position: relative;
-  top: 0;
-  left: 0;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-size: 10px;
   background-color: @colorWhite;
   color: @colorBlack;
