--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -2,20 +2,20 @@
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;
 
   img {   
     width: 100%;
-    min-height: 500px;
-    box-shadow: 0px 5px 35px 5px @colorBlack;
+    max-width: 100%;
+    min-height: 50em;
+    box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
   }
 
   .triangle-down {
     position: absolute;
-    bottom: -25px;
+    bottom: -2.5em;
     left: 49%;
     border-style: solid;
-    border-width: 20px 15px 0px 15px;
+    border-width: 2em 1.5em 0em 1.5em;
     border-color: @colorBlack transparent;
     cursor: pointer;
   }
@@ -24,7 +24,7 @@
 @media only screen and (max-width: 1025px) {
   .hero-image {
     img {
-      min-height: 400px;
+      min-height: 30em;
     }
   }
 }
@@ -32,7 +32,7 @@
 @media only screen and (min-width: 1599px) {
   .hero-image {
     img {
-      min-height: 700px;
+      min-height: 70em;
     }
   }
 }
