--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -6,7 +6,7 @@
 
   <div class="content home-content">
     <div class="row title">
-      <h1>{{homeTitle}}</h1>  
+      <h1>{{pageTitle}}</h1>  
     </div>
     <div class="row frames">
       <div class="col-md-4 frame" ng-repeat="link in links">
