updated grunt js task, updated home to use directive

--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,8 +1,5 @@
 <div class="container" ng-controller="HomeController">
-  <div class="hero-image">
-    <img src="images/hero/seattle_bw.jpg" alt="Seattle skyline in black and white at night">
-    <span class="triangle-down" ng-click="broadcast($event, TO_CONTENT)"></span>
-  </div>
+  <div data-hero-image></div>
 
   <div class="content home-content">
     <div class="row title">
