--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -3,15 +3,15 @@
 
   <div class="content home-content">
     <div class="row title">
-      <h1>{{pageTitle}}</h1>  
+      <h1>{{page.title}}</h1>  
     </div>
-    <div class="row frames">
-      <div class="col-md-4 frame" ng-repeat="link in links">
-        <a href="javascript:void(0)" class="framed {{link.className}}" alt="{{link.alt}}"
-           ng-click="broadcast($event, link.FRAME_CLICK, link.FRAME_NAME)">
-            {{link.title}}
-         </a>
-      </div>
+
+    <div class="row projects">
+      <ul>
+        <li ng-repeat="project in projects">
+          
+        </li>
+      </ul>
     </div>
   </div>  
 </div>
