--- a/public/views/partials/heroes.html
+++ b/public/views/partials/heroes.html
@@ -1,4 +1,4 @@
 <div class="hero-image">
-  <img src="{{heroImageUrl}}" alt="{{heroImageAlt}}">
+  <img src="{{page.heroImageUrl}}" alt="{{page.heroImageAlt}}">
   <span class="triangle-down" ng-click="broadcast($event, TO_CONTENT)"></span>
 </div>
