--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -3,7 +3,8 @@
 
   <div class="content home-content">
     <div class="row title">
-      <h1>{{page.title}}</h1>  
+      <h1>{{page.title}}</h1> 
+      <h1>{{code.title}}</h1> 
     </div>
 
     <div class="row projects">
