--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -4,13 +4,27 @@
   <div class="content home-content">
     <div class="row title">
       <h1>{{page.title}}</h1> 
-      <h1>{{code.title}}</h1> 
     </div>
 
-    <div class="row projects">
+    <div class="row sections">
       <ul>
-        <li ng-repeat="project in projects">
-          
+        <li class="section" ng-repeat="sections in page.sections">
+          <div class="col-md-3" ng-class="{ 
+            'box-left': ($index + 1) % 2 !== 0,
+            'box-right': ($index + 1) % 2 === 0
+          }">
+            <div class="img" ng-repeat="images in section">
+              <img src="image.url" alt="image.alt">
+            </div>
+          </div>
+          <div class="col-md-9" ng-class="{ 
+            'box-left': ($index + 1) % 2 !== 0,
+            'box-right': ($index + 1) % 2 === 0
+          }">
+            <h2 class="title">{{section.title}}</h2>
+            <h3 class="subtitle"></h3>
+          </div>
+
         </li>
       </ul>
     </div>
