--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -6,9 +6,9 @@
       <h1>{{page.title}}</h1>  
     </div>
     <div class="row frames">
-      <div class="col-md-4 frame" ng-repeat="link in links">
+      <div class="col-md-4 frame" ng-repeat="link in page.sections">
         <a href="javascript:void(0)" class="framed {{link.className}}" alt="{{link.alt}}"
-           ng-click="broadcast($event, link.FRAME_CLICK, link.FRAME_NAME)">
+           ng-click="broadcast($event, link.FRAME_CLICK, link.title.toUpperCase())">
             {{link.title}}
          </a>
       </div>
