--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -1,30 +1,26 @@
 <div class="container" ng-controller="CodeController">
   <div data-hero-image></div>
 
-  <div class="content home-content">
+  <div class="content code-content">
     <div class="row title">
-      <h1>{{page.title}}</h1> 
+      <div class="col-md-12">
+        <h1>{{page.title}}</h1>         
+      </div>
     </div>
 
-    <div class="row sections">
+    <div class="row frames">
       <ul>
-        <li class="section" ng-repeat="section in page.sections">
-          <div class="col-md-3" ng-class="{ 
-            'box-left': ($index + 1) % 2 !== 0,
-            'box-right': ($index + 1) % 2 === 0
-          }">
-            <div class="img" ng-repeat="img in section.images">
-              <img src="{{img.url}}" alt="{{img.alt}}">
+        <li class="section" ng-repeat="project in page.sections">
+          <div class="col-md-4 frame">
+            <div class="frame" ng-repeat="img in project.images">
+              <a href="javascript:void(0)" class="framed"
+                 name="{{img.alt}}" ng-click="broadcast($event, STATE.PROJECT, $index)">
+                <img src="{{img.url}}" alt="{{img.alt}}">
+                <h2 class="section-title">{{project.title}}</h2>
+                <h3 class="section-subtitle">{{project.subtitle}}</h3>
+              </a>
             </div>
           </div>
-          <div class="col-md-9" ng-class="{ 
-            'box-left': ($index + 1) % 2 !== 0,
-            'box-right': ($index + 1) % 2 === 0
-          }">
-            <h2 class="section-title">{{section.title}}</h2>
-            <h3 class="section-subtitle">{{section.subtitle}}</h3>
-          </div>
-
         </li>
       </ul>
     </div>
