--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -3,16 +3,23 @@
 
   <div class="content home-content">
     <div class="row title">
-      <h1>{{page.title}}</h1>  
-    </div>
-    <div class="row frames">
-      <div class="col-md-4 frame" ng-repeat="link in page.sections">
-        <a href="javascript:void(0)" class="framed {{link.className}}" 
-           alt="{{link.alt}}" name="{{link.alt}}" tabindex="{{$index}}"
-           ng-click="broadcast($event, link.FRAME_CLICK, link.title.toUpperCase())">
-            {{link.title}}
-         </a>
+      <div class="col-md-12">
+        <h1>{{page.title}}</h1>          
       </div>
     </div>
-  </div>  
+
+    <div class="row frames">
+      <ul>
+        <li ng-repeat="link in page.sections">
+          <div class="col-md-4 frame" >
+            <a href="javascript:void(0)" class="framed {{link.className}}" 
+               alt="{{link.alt}}" name="{{link.alt}}" tabindex="{{$index}}"
+               ng-click="broadcast($event, link.FRAME_CLICK, link.title.toUpperCase())">
+                {{link.title}}
+             </a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
