--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -8,68 +8,73 @@ body {
   color: @colorBlack;
   -webkit-font-smoothing: subpixel-antialiased;
   font-smooth: auto;
+}
 
-  a {
-    color: @colorBlack;
+a {
+  color: @colorBlack;
+  text-decoration: none;
+
+  &:hover, &:active, &:focus {
+    color: @colorGray;
     text-decoration: none;
+  }
+}
 
-    &:hover, &:active, &:focus {
-      color: @colorGray;
-      text-decoration: none;
-    }
+ul, li {
+  margin: 0;
+  padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "BodoniXT";
+}
+
+.row {
+  display: block;
+  width: 98%;
+  margin: 0 1%;
+
+  &:after {
+    clear: both;
   }
 
-  h1,h2,h3,h4,h5,h6 {
-    font-family: "BodoniXT";
-  }
-
-  .row {
+  .col-md-2,.col-md-3,.col-md-4,.col-md-5,
+  .col-md-6,.col-md-7,.col-md-8,.col-md-9,
+  .col-md-10,.col-md-11,.col-md-12 {
     display: block;
-    width: 98%;
-    margin: 0 1%;
-
-    &:after {
-      clear: both;
-    }
-
-    .col-md-2,.col-md-3,.col-md-4,.col-md-5,
-    .col-md-6,.col-md-7,.col-md-8,.col-md-9,
-    .col-md-10,.col-md-11,.col-md-12 {
-      display: block;
-      float: left;
-    }
-    .col-md-2 {
-      width: 16.66667%;
-    }
-    .col-md-3 {
-      width: 25%;
-    }
-    .col-md-4 {
-      width: 33.33333%;
-    }
-    .col-md-5 {
-      width: 41.66667%;
-    }
-    .col-md-6 {
-      width: 50%;
-    }
-    .col-md-7 {
-      width: 58.33333%;
-    }
-    .col-md-8 {
-      width: 66.66667%;
-    }
-    .col-md-9 {
-      width: 75%;
-    }
-    .col-md-10 {
-      width: 83.33333%;
-    }
-    .col-md-11 {
-      width: 91.66667%;
-    }
-    .col-md-12 {
-      width: 100%;
-    }
+    float: left;
+  }
+  .col-md-2 {
+    width: 16.66667%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33333%;
+  }
+  .col-md-5 {
+    width: 41.66667%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33333%;
+  }
+  .col-md-8 {
+    width: 66.66667%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33333%;
+  }
+  .col-md-11 {
+    width: 91.66667%;
+  }
+  .col-md-12 {
+    width: 100%;
   }
 }
