--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -1,5 +1,7 @@
 @media screen only and (max-width: 992px) {
   body {
+    font-size: 0.85em;
+    
     .row {
       .col-md-2 {
         width: 33.33333%;
