refined code page markup and styles

--- a/public/stylesheets/partials/_code.less
+++ b/public/stylesheets/partials/_code.less
@@ -2,7 +2,7 @@
 	li {
 		display: inline-block;
 	}
-	
+
 	a {
 		h2, h3 {
 			display: inline-block;
@@ -24,10 +24,10 @@
 
 		&.framed {
 			position: relative;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
+			top: 1em;
+			left: 1em;
+			bottom: 1em;
+			right: 1em;
 			width: 100%;
 			height: 100%;
 			.fontSerif4-0;
