--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -43,6 +43,7 @@ h1,h2,h3,h4,h5,h6 {
   .col-md-10,.col-md-11,.col-md-12 {
     display: block;
     float: left;
+    padding: 1em;
   }
   .col-md-2 {
     width: 16.66667%;
