styling for code page

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -20,6 +20,15 @@ a {
   }
 }
 
+.title {
+  text-align: center;
+  min-height: 25em;
+
+  h1 {
+    .fontSerif9-0;
+  }
+}
+
 ul, li {
   margin: 0;
   padding: 0;
@@ -43,7 +52,6 @@ h1,h2,h3,h4,h5,h6 {
   .col-md-10,.col-md-11,.col-md-12 {
     display: block;
     float: left;
-    padding: 1em;
   }
   .col-md-2 {
     width: 16.66667%;
