--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -1,19 +1,15 @@
-.content {
+.home-content {
   height: 100%;
   li {
     display: block;
   }
-  .title {
-    text-align: center;
-    min-height: 25em;
-
-    h1 {
-      .fontSerif9-0;
-    }
-  }
 
   .frame {
     margin-bottom: 7em;  
+  }
+
+  .framed {
+    border-width: 0.125em;
   }
 }
 
