--- a/public/stylesheets/partials/_links.less
+++ b/public/stylesheets/partials/_links.less
@@ -4,7 +4,7 @@ a {
     margin: 0 auto;
     padding: 0.95em 0;
     width: 3.125em;
-    border: 0.125em solid @colorBlack;
+    border: 0 solid @colorBlack;
     text-align: center;
     text-transform: uppercase;
     background-repeat: no-repeat;
