--- a/public/stylesheets/partials/_code.less
+++ b/public/stylesheets/partials/_code.less
@@ -3,38 +3,36 @@
 		display: inline-block;
 	}
 
+	[class^=col-] {
+		padding: 1em;
+	}
+
 	a {
-		h2, h3 {
+		h2 {
 			display: inline-block;
 			position: absolute;
 			top: 1em;
 			left: 0.1em;
-			opacity: 1;
-			-webkit-transition: opacity 500ms ease;
-		}
-
-		h3 {
 			opacity: 0;
+			-webkit-transition: opacity 500ms ease-in-ease-out;
 		}
 
 		&:hover {
-			h2 { opacity: 0; }
-			h3 { opacity: 1; }
+			h2 { opacity: 1; }
 		}
 
 		&.framed {
 			position: relative;
-			top: 1em;
-			left: 1em;
-			bottom: 1em;
-			right: 1em;
-			width: 100%;
-			height: 100%;
+			padding: 4em 3em;
+			border-width: 0.25em;
 			.fontSerif4-0;
 
 			img {
+				position: absolute;
 				max-width: 100%;
 				min-height: 100%;
+				top: 0;
+				left: 0;
 			}
 
 
