flushing out styling of code/projects pages

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -40,8 +40,9 @@ h1,h2,h3,h4,h5,h6 {
 
 .row {
   display: block;
+  height: 100%;
   width: 98%;
-  margin: 0 1%;
+  padding: 0 1%;
 
   &:after {
     clear: both;
