--- a/public/stylesheets/partials/_code.less
+++ b/public/stylesheets/partials/_code.less
@@ -7,6 +7,16 @@
 		padding: 1em;
 	}
 
+	.roller {
+		display: block;
+		float: left;
+		width: 80%;
+		height: 100%;
+		margin: 0 5.9% 5em;
+		border: 1.5em solid @colorBlack;
+		padding: 4em;
+	}
+
 	a {
 		h2 {
 			display: inline-block;
@@ -24,8 +34,8 @@
 		&.framed {
 			position: relative;
 			padding: 4em 3em;
-			border-width: 0.25em;
-			.fontSerif4-0;
+			border-width: 0.5em;
+			.fontSerif2-0;
 
 			img {
 				position: absolute;
