--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -8,20 +8,22 @@
       </div>
     </div>
 
-    <div class="row frames">
-      <ul>
-        <li class="col-md-4 section" ng-repeat="project in page.sections">
-          <div class="frame">
-            <a href="javascript:void(0)" class="framed"
-               name="{{project.images[0].alt}}" 
-               ng-click="broadcast($event, STATE.PROJECT, project.id)">
-               
-              <img src="{{project.images[0].url}}" alt="{{project.images[0].alt}}">
-              <h2 class="section-title">{{project.title}}</h2>
-            </a>
-          </div>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="roller">
+        <ul class="frames">
+          <li class="col-md-4 section" ng-repeat="project in page.sections">
+            <div class="frame">
+              <a href="javascript:void(0)" class="framed"
+                 name="{{project.images[0].alt}}" 
+                 ng-click="broadcast($event, STATE.PROJECT, project.id)">
+                 
+                <img src="{{project.images[0].url}}" alt="{{project.images[0].alt}}">
+                <h2 class="section-title">{{project.title}}</h2>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>  
 </div>
