--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -1,41 +1,42 @@
-@media screen only and (max-width: 992px) {
+@media only screen and (max-width: 992px) {
   body {
     font-size: 0.85em;
-    
-    .row {
-      .col-md-2 {
-        width: 33.33333%;
-      }
-      .col-md-3 {
-        width: 33.33333%;
-      }
-      .col-md-4 {
-        width: 50%;
-      }
-      .col-md-5 {
-        width: 50%;
-      }
-      .col-md-6 {
-        width: 100%;
-      }
-      .col-md-7 {
-        width: 100%;
-      }
-      .col-md-8 {
-        width: 100%;
-      }
-      .col-md-9 {
-        width: 100%;
-      }
-      .col-md-10 {
-        width: 100%;
-      }
-      .col-md-11 {
-        width: 100%;
-      }
-      .col-md-12 {
-        width: 100%;
-      }
+  }  
+
+  .row {
+    .col-md-2 {
+      width: 33.33333%;
+    }
+    .col-md-3 {
+      width: 33.33333%;
+    }
+    .col-md-4 {
+      width: 50%;
+    }
+    .col-md-5 {
+      width: 50%;
+    }
+    .col-md-6 {
+      width: 100%;
+    }
+    .col-md-7 {
+      width: 100%;
+    }
+    .col-md-8 {
+      width: 100%;
+    }
+    .col-md-9 {
+      width: 100%;
+    }
+    .col-md-10 {
+      width: 100%;
+    }
+    .col-md-11 {
+      width: 100%;
+    }
+    .col-md-12 {
+      width: 100%;
     }
   }
+
 }
