--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -10,10 +10,10 @@
 
 @font-face {
   font-family: 'FuturaT-Ligh';
-  src: url('FuturaT-Ligh.eot?#iefix') format('embedded-opentype'),  
-       url('FuturaT-Ligh.woff') format('woff'), 
-       url('FuturaT-Ligh.ttf')  format('truetype'), 
-       url('FuturaT-Ligh.svg#FuturaT-Ligh') format('svg');
+  src: url('/fonts/FuturaT-Ligh.eot?#iefix') format('embedded-opentype'),  
+       url('/fonts/FuturaT-Ligh.woff') format('woff'), 
+       url('/fonts/FuturaT-Ligh.ttf')  format('truetype'), 
+       url('/fonts/FuturaT-Ligh.svg#FuturaT-Ligh') format('svg');
   font-style: normal;
 }
 
@@ -55,14 +55,29 @@
 .fontRegular1-6 {
   font-family: "FuturaT-Ligh";
   font-size: 1.6em;
+  font-weight: 400;
 }
 
 .fontRegular2-0 {
   font-family: "FuturaT-Ligh";
   font-size: 2em;
+  font-weight: 400;
 }
 
-.fontRegular2-5 {
+.fontRegular2-2-5 {
   font-family: "FuturaT-Ligh";
-  font-size: 2.5em;
+  font-size: 2.25em;
+  font-weight: 400;
+}
+
+.fontRegular4-5 {
+  font-family: "FuturaT-Ligh";
+  font-size: 4.5em;
+  font-weight: 400;
+}
+
+.fontRegular9-0 {
+  font-family: "FuturaT-Ligh";
+  font-size: 9em;
+  font-weight: 400;
 }
