--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -29,6 +29,25 @@ a {
   }
 }
 
+.subtitle {
+  text-align: left;
+  min-height: 15em;
+  margin: 5em 0 25% 28.91%;
+  h1,h3 {
+    margin: -5px 0 0 0;
+  }
+  h1 {
+    .fontRegular9-0;
+  }
+  h3 {
+    .fontRegular4-5;
+  }
+  h4 {
+    .fontRegular2-2-5;
+    margin: 0.5em 0 0;
+  }
+}
+
 ul, li {
   margin: 0;
   padding: 0;
