--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -7,8 +7,13 @@
         <h1>{{page.title}}</h1>          
       </div>
     </div>
+    <div class="row subtitle">
+      <h1>{{page.subtitle}}</h1>
+      <h3>{{page.tagline}}</h3>
+      <h4>{{page.memo}}</h4>
+    </div>
 
-    <div class="row frames">
+    <div data-ng-if="false" class="row frames">
       <ul>
         <li ng-repeat="link in page.sections">
           <div class="col-md-4 frame" >
