--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -34,9 +34,11 @@ a {
 }
 
 .subtitle {
-  text-align: left;
+  width: 40%;
   min-height: 15em;
-  margin: 5em 0 24% 28.91%;
+  margin: 5em auto 22%;
+  text-align: left;
+  
   h1,h3 {
     margin: -5px 0 0 0;
   }
