--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -7,10 +7,12 @@
         <h1>{{page.title}}</h1>          
       </div>
     </div>
-    <div class="row subtitle">
+    <div class="row">
+    <div class="subtitle">
       <h1>{{page.subtitle}}</h1>
       <h3>{{page.tagline}}</h3>
-      <h4>{{page.memo}}</h4>
+      <h4>{{page.memo}}</h4>   
+    </div>
     </div>
 
     <div data-ng-if="false" class="row frames">
