--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -4,15 +4,18 @@
   <div class="content home-content">
     <div class="row title">
       <div class="col-md-12">
-        <h1>{{page.title}}</h1>          
+      <a href="http://github.com/louisnk">
+        <h1>{{page.title}}</h1>
+      </a>
       </div>
     </div>
     <div class="row">
     <div class="subtitle">
       <h1>{{page.subtitle}}</h1>
       <h3>{{page.tagline}}</h3>
-      <h4>{{page.memo}}</h4>   
+      <h4>{{page.memo}}</h4>
     </div>
+
     </div>
 
     <div data-ng-if="false" class="row frames">
