--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -34,11 +34,17 @@ a {
 }
 
 .subtitle {
-  width: 40%;
+  width: 635px;
   min-height: 15em;
   margin: 5em auto 22%;
   text-align: left;
-  
+  h1,h3,h4 {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+  }
+
   h1,h3 {
     margin: -5px 0 0 0;
   }
