updated mobile layout, scrolling

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -25,7 +25,8 @@ a {
 }
 
 .title {
-  text-align: center;
+  width: 650px;
+  margin: 0 auto;
   min-height: 25em;
 
   h1 {
@@ -34,9 +35,9 @@ a {
 }
 
 .subtitle {
-  width: 635px;
+  width: 650px;
   min-height: 15em;
-  margin: 5em auto 22%;
+  margin: 5em auto 25%;
   text-align: left;
   h1,h3,h4 {
     -webkit-margin-before: 0;
@@ -79,43 +80,40 @@ h1,h2,h3,h4,h5,h6 {
     clear: both;
   }
 
-  .col-md-2,.col-md-3,.col-md-4,.col-md-5,
-  .col-md-6,.col-md-7,.col-md-8,.col-md-9,
-  .col-md-10,.col-md-11,.col-md-12 {
+  .col-d-2,.col-d-3,.col-d-4,.col-d-5,
+  .col-d-6,.col-d-7,.col-d-8,.col-d-9,
+  .col-d-10,.col-d-12 {
     display: block;
     float: left;
   }
-  .col-md-2 {
+  .col-d-2 {
     width: 16.66667%;
   }
-  .col-md-3 {
+  .col-d-3 {
     width: 25%;
   }
-  .col-md-4 {
+  .col-d-4 {
     width: 33.33333%;
   }
-  .col-md-5 {
+  .col-d-5 {
     width: 41.66667%;
   }
-  .col-md-6 {
+  .col-d-6 {
     width: 50%;
   }
-  .col-md-7 {
+  .col-d-7 {
     width: 58.33333%;
   }
-  .col-md-8 {
+  .col-d-8 {
     width: 66.66667%;
   }
-  .col-md-9 {
+  .col-d-9 {
     width: 75%;
   }
-  .col-md-10 {
+  .col-d-10 {
     width: 83.33333%;
   }
-  .col-md-11 {
-    width: 91.66667%;
-  }
-  .col-md-12 {
+  .col-d-12 {
     width: 100%;
   }
 }
