--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -4,37 +4,34 @@
   }  
 
   .row {
-    .col-md-2 {
+    .col-d-2 {
       width: 33.33333%;
     }
-    .col-md-3 {
+    .col-d-3 {
       width: 33.33333%;
     }
-    .col-md-4 {
+    .col-d-4 {
       width: 50%;
     }
-    .col-md-5 {
+    .col-d-5 {
       width: 50%;
     }
-    .col-md-6 {
+    .col-d-6 {
       width: 100%;
     }
-    .col-md-7 {
+    .col-d-7 {
       width: 100%;
     }
-    .col-md-8 {
+    .col-d-8 {
       width: 100%;
     }
-    .col-md-9 {
+    .col-d-9 {
       width: 100%;
     }
-    .col-md-10 {
+    .col-d-10 {
       width: 100%;
     }
-    .col-md-11 {
-      width: 100%;
-    }
-    .col-md-12 {
+    .col-d-12 {
       width: 100%;
     }
   }
