changed mobile image and animation

--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -1,8 +1,22 @@
 @media only screen and (max-width: 992px) {
   body {
-    font-size: 0.85em;
-  }  
-
+    font-size: 0.9em;
+  } 
+  .hidden-phone {
+    display: none !important;
+    visibility: hidden !important;
+  }
+  .visible-phone {
+    display: block !important;
+    visibility: visible !important;
+  }
+  .title, .subtitle {
+    width: 100%;
+    text-align: center;
+  }
+  .subtitle h4 {
+    .fontRegular3-0;
+  }
   .row {
     .col-d-2 {
       width: 33.33333%;
