--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -2,7 +2,7 @@
   <div data-hero-image></div>
 
   <div class="content home-content">
-    <div class="row title">
+    <div class="row">
       <div class="col-md-12">
         <div class="title">
           <a href="http://github.com/louisnk">
@@ -10,7 +10,6 @@
           </a>
         </div>
         <div class="subtitle">
-
           <h1>{{page.subtitle}}</h1>
           <h3>{{page.tagline}}</h3>
           <h4>{{page.memo}}</h4>
