--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -70,6 +70,13 @@
   font-weight: 400;
 }
 
+.fontRegular3-0 {
+  font-family: "FuturaT-Ligh";
+  font-size: 3em;
+  font-weight: 400;
+  
+}
+
 .fontRegular4-5 {
   font-family: "FuturaT-Ligh";
   font-size: 4.5em;
