--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -26,10 +26,12 @@ a {
 
 .title {
   width: 650px;
-  margin: 0 auto;
+  margin: 6em auto 0;
   min-height: 25em;
 
   h1 {
+    display: block;
+    margin: 0 auto;
     .fontSerif9-0;
   }
 }
@@ -37,7 +39,7 @@ a {
 .subtitle {
   width: 650px;
   min-height: 15em;
-  margin: 5em auto 25%;
+  margin: 5em auto 22%;
   text-align: left;
   h1,h3,h4 {
     -webkit-margin-before: 0;
@@ -68,6 +70,14 @@ ul, li {
 
 h1,h2,h3,h4,h5,h6 {
   font-family: "BodoniXT";
+}
+.hidden-phone {
+  display: block !important;
+  visibility: visible !important;
+}
+.visible-phone {
+  display: none !important;
+  visibility: hidden !important;
 }
 
 .row {
