--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 992px) {
   body {
     font-size: 0.9em;
+    overflow: hidden !important;
   } 
   .hidden-phone {
     display: none !important;
