--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -7,14 +7,25 @@
   font-style: normal;
 }
 
-
 @font-face {
-  font-family: 'FuturaT-Ligh';
+  font-family: 'FuturaT-Light';
   src: url('/fonts/FuturaT-Ligh.eot?#iefix') format('embedded-opentype'),  
        url('/fonts/FuturaT-Ligh.woff') format('woff'), 
        url('/fonts/FuturaT-Ligh.ttf')  format('truetype'), 
        url('/fonts/FuturaT-Ligh.svg#FuturaT-Ligh') format('svg');
   font-style: normal;
+}
+
+@font-face {
+    font-family: 'Futura-Medium';
+    src: url('/fonts/futura-medium-webfont.eot');
+    src: url('/fonts/futura-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/futura-medium-webfont.woff2') format('woff2'),
+         url('/fonts/futura-medium-webfont.woff') format('woff'),
+         url('/fonts/futura-medium-webfont.ttf') format('truetype'),
+         url('/fonts/futura-medium-webfont.svg#futuramedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -53,38 +64,38 @@
 
 /* Sans-serif (copy) fonts */
 .fontRegular1-6 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 1.6em;
   font-weight: 400;
 }
 
 .fontRegular2-0 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 2em;
   font-weight: 400;
 }
 
 .fontRegular2-2-5 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 2.25em;
   font-weight: 400;
 }
 
 .fontRegular3-0 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 3em;
   font-weight: 400;
   
 }
 
 .fontRegular4-5 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 4.5em;
   font-weight: 400;
 }
 
 .fontRegular9-0 {
-  font-family: "FuturaT-Ligh";
+  font-family: "FuturaT-Light";
   font-size: 9em;
   font-weight: 400;
 }
