--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -2,13 +2,10 @@
   position: relative;
   top: 0;
   left: 0;
-
-  img {   
-    width: 100%;
-    max-width: 100%;
-    min-height: 50em;
-    box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
-  }
+  z-index: -10;
+  width: 100%;
+  min-height: 50em;
+  box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
 
   .triangle-down {
     position: absolute;
@@ -23,8 +20,20 @@
 
 @media only screen and (max-width: 992px) {
   .hero-image {
-    img {
-      min-height: 30em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 120%;
+    height: 100%;
+    color: @colorWhite;
+    background-size: 100%;
+    box-shadow: none;
+
+    .photo-loc {
+      position: absolute;
+      top: 0;
+      right: 20%;
+      .fontRegular2-0;
     }
   }
 }
