updated markup and styling for mobile design

--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -63,39 +63,86 @@
 
 
 /* Sans-serif (copy) fonts */
-.fontRegular1-6 {
+.fontSansSerif1-6 {
   font-family: "FuturaT-Light";
   font-size: 1.6em;
   font-weight: 400;
 }
 
-.fontRegular2-0 {
+.fontSansSerif2-0 {
   font-family: "FuturaT-Light";
   font-size: 2em;
   font-weight: 400;
 }
 
-.fontRegular2-2-5 {
+.fontSansSerif2-2-5 {
   font-family: "FuturaT-Light";
   font-size: 2.25em;
   font-weight: 400;
 }
 
-.fontRegular3-0 {
+.fontSansSerif3-0 {
   font-family: "FuturaT-Light";
   font-size: 3em;
   font-weight: 400;
-  
 }
-
-.fontRegular4-5 {
+.fontSansSerif4-0 {
+  font-family: "FuturaT-Light";
+  font-size: 4em;
+  font-weight: 400;
+}
+.fontSansSerif4-5 {
   font-family: "FuturaT-Light";
   font-size: 4.5em;
   font-weight: 400;
 }
+.fontSansSerif6-7-5 {
+  font-family: "FuturaT-Light";
+  font-size: 6.75em;
+  font-weight: 400; 
+}
 
-.fontRegular9-0 {
+.fontSansSerif8-0 {
+  font-family: "FuturaT-Light";
+  font-size: 8em;
+  font-weight: 400;
+}
+
+.fontSansSerif9-0 {
   font-family: "FuturaT-Light";
   font-size: 9em;
+  font-weight: 400;
+}
+
+
+/* Bold Sans-serifs */
+.fontSansSerifBold1-0 {
+  font-family: "Futura-Medium";
+  font-size: 1em;
+  font-weight: 400;
+}
+
+.fontSansSerifBold2-0 {
+  font-family: "Futura-Medium";
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.fontSansSerifBold3-0 {
+  font-family: "Futura-Medium";
+  font-size: 3em;
+  font-weight: 400;
+}
+
+.fontSansSerifBold6-0 {
+  font-family: "Futura-Medium";
+  font-size: 6em;
+  font-weight: 400;
+}
+
+
+.fontSansSerifBold15-0 {
+  font-family: "Futura-Medium";
+  font-size: 15em;
   font-weight: 400;
 }
