--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -25,7 +25,8 @@ a {
 }
 
 .title {
-  width: 650px;
+  position: relative;
+  width: 55em;
   margin: 6em auto 0;
   min-height: 25em;
 
@@ -33,6 +34,7 @@ a {
     display: block;
     margin: 0 auto;
     .fontSerif9-0;
+    letter-spacing: -0.08em;
   }
 }
 
@@ -51,14 +53,11 @@ a {
   h1,h3 {
     margin: -5px 0 0 0;
   }
-  h1 {
-    .fontRegular9-0;
-  }
-  h3 {
-    .fontRegular4-5;
-  }
-  h4 {
-    .fontRegular2-2-5;
+  h1 { .fontSansSerif9-0; }
+  h2 { .fontSansSerif6-7-5; }
+  h3 { .fontSansSerif4-5; }
+  h4 { 
+    .fontSansSerif2-2-5;
     margin: 0.5em 0 0;
   }
 }
