--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -5,6 +5,7 @@
   z-index: -10;
   width: 100%;
   min-height: 50em;
+  background-size: 100%;
   box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
 
   .triangle-down {
@@ -33,7 +34,7 @@
       position: absolute;
       top: 0;
       right: 20%;
-      .fontRegular2-0;
+      .fontSansSerif2-0;
     }
   }
 }
