--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 992px) {
   body {
-    font-size: 0.9em;
     overflow: hidden !important;
   } 
   .hidden-phone {
@@ -16,7 +15,7 @@
     text-align: center;
   }
   .subtitle h4 {
-    .fontRegular3-0;
+    .fontSansSerif3-0;
   }
   .row {
     .col-d-2 {
