--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -8,10 +8,10 @@
           <a href="http://github.com/louisnk">
             <h1>{{page.title}}</h1>
           </a>
+          <span class="tagline">{{page.tagline}}</span>
         </div>
         <div class="subtitle">
-          <h1>{{page.subtitle}}</h1>
-          <h3>{{page.tagline}}</h3>
+          <!-- <h2>{{page.subtitle}}</h2> -->
           <h4>{{page.memo}}</h4>
         </div>
       </div>
@@ -19,14 +19,14 @@
   </div>
 
   <div class="content home-content" ng-if="states.mobile">
-    <h1 class="mobile-title">{{page.title}}</h1>
-    <div class="mobile-subtitle">
-      <h3>{{page.tagline}}
-      </h3>
-      <a href="#" ng-click="broadcast($event, NAV_EVENT.SHOW_MENU)">
-        {{page.memo}}
-      </a>
+    <a href="http://github.com/louisnk" class="mobile-title">
+      <h1>{{page.title}}</h1>
+    </a>
+    <span class="tagline">{{page.tagline}}</span>
+    <a href="#" ng-click="broadcast($event, NAV_EVENT.SHOW_MENU)" class="menu">
+      {{page.memo}}
+    </a>
       
-    </div>
   </div>
 </div>
+
