forgot to put my up-one-level in the right place

--- a/public/views/partials/heroes.html
+++ b/public/views/partials/heroes.html
@@ -1,5 +1,5 @@
 <div class="hero-image" 
-		 style="background-image: url('../{{page && page.heroImageUrl }}')">
+		 style="background-image: url('{{page && page.heroImageUrl }}')">
 
   <span class="triangle-down hidden-phone" 
   			ng-click="broadcast($event, TO_CONTENT)"></span>
