for the retinas

--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -39,10 +39,13 @@
   }
 }
 
+@media only screen and (min-width: 1400px) {
+  .hero-image {
+    min-height: 44em;
+  }
+}
 @media only screen and (min-width: 1599px) {
   .hero-image {
-    img {
-      min-height: 70em;
-    }
+    min-height: 70em;
   }
 }
