sweetness on desktop and mobile for homepage

--- a/public/stylesheets/includes/_var.less
+++ b/public/stylesheets/includes/_var.less
@@ -1,4 +1,8 @@
 @colorWhite: rgb(255, 255, 255); // #fff
 @colorBlack: rgb(0, 0, 0); // #000
+@colorBrownDark: rgb(68,46,11); // #442e0b
 @colorGray: rgb(51, 51, 51); // #666;
 @colorGrayOpaque: rgba(51, 51, 51, 0.4); // #666 opacity: 0.4
+
+@titleWidth: 35%;
+
