--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -9,6 +9,7 @@
   box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
 
   .triangle-down {
+    display: none !important;
     position: absolute;
     bottom: -2.5em;
     left: 49%;
