--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -1,21 +1,27 @@
 @media only screen and (min-width: 993px) {
   .home-content {
-    height: 100%;
     z-index: 1;
 
     .tagline {
       position: relative;
-      top: -0.5em;
+      top: -1.05em;
       .fontSansSerif3-0;
       letter-spacing: 0.0166em;
     }
 
-    .frame {
-      margin-bottom: 7em;  
-    }
+    .subtitle {
+      a {
+        float: left;
+        color: @colorBlack;
+      }
+      h4 {
+        position: relative;
+        top: -0.91em;
+        left: 10.49em;
+        margin: 0;
 
-    .framed {
-      border-width: 0.125em;
+        .fontSansSerif4-5;
+      }
     }
   }
 }
