--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -12,7 +12,9 @@
         </div>
         <div class="subtitle">
           <!-- <h2>{{page.subtitle}}</h2> -->
-          <h4>{{page.memo}}</h4>
+          <a href="#" ng-click="broadcast($event, NAV_EVENT.EXPLORE)">
+            <h4>{{page.memo}}</h4>
+          </a>
         </div>
       </div>
     </div>
