--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -19,16 +19,16 @@ a {
   text-decoration: none;
 
   &:hover, &:active, &:focus {
-    color: @colorGray;
+    color: @colorBrownDark;
     text-decoration: none;
   }
 }
 
 .title {
   position: relative;
-  width: 55em;
+  width: 40%;
   margin: 6em auto 0;
-  min-height: 25em;
+  a { float: left; }
 
   h1 {
     display: block;
@@ -40,8 +40,7 @@ a {
 
 .subtitle {
   width: 650px;
-  min-height: 15em;
-  margin: 5em auto 22%;
+  margin: 5em auto 0;
   text-align: left;
   h1,h3,h4 {
     -webkit-margin-before: 0;
