cross browser styling bugs

--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -11,15 +11,15 @@
 
     .subtitle {
       a {
+        position: relative;
+        top: 0;
+        left: 77.87%;
         float: left;
+        clear: both;
         color: @colorBlack;
       }
       h4 {
-        position: relative;
-        top: -0.91em;
-        left: 10.49em;
         margin: 0;
-
         .fontSansSerif4-5;
       }
     }
