--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -10,13 +10,19 @@
     display: block !important;
     visibility: visible !important;
   }
+  
+
   .title, .subtitle {
     width: 100%;
     text-align: center;
+    min-height: 0;
+    margin: 5em auto 0;
   }
   .subtitle h4 {
     .fontSansSerif3-0;
   }
+
+
   .row {
     .col-d-2 {
       width: 33.33333%;
