--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -3,7 +3,7 @@
 
   <div class="content home-content" ng-if="!states.mobile">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-d-12">
         <div class="title">
           <a href="http://github.com/louisnk">
             <h1>{{page.title}}</h1>
