--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -24,10 +24,16 @@ a {
   }
 }
 
+.title, .subtitle {
+  width: 35%;
+  min-width: 550px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .title {
   position: relative;
-  width: 40%;
-  margin: 6em auto 0;
+  margin-top: 6em;
   a { float: left; }
 
   h1 {
@@ -39,9 +45,7 @@ a {
 }
 
 .subtitle {
-  width: 650px;
-  margin: 5em auto 0;
-  text-align: left;
+
   h1,h3,h4 {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
