--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -3,7 +3,7 @@
 
   <div class="content code-content">
     <div class="row title">
-      <div class="col-md-12">
+      <div class="col-d-12">
         <h1>{{page.title}}</h1>
       </div>
     </div>
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="roller">
         <ul class="tiles">
-          <li class="col-md-3 section" ng-repeat="project in page.sections">
+          <li class="col-d-3 section" ng-repeat="project in page.sections">
             <a href="javascript:void(0)" class="tile"
                name="{{project.images[0].alt}}" 
                ng-click="broadcast($event, STATE.PROJECT, project.id)">
