fixed positioning for mobile browser title bars

--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -35,9 +35,9 @@
 
 @media screen and (min-width: 900px) and (max-width:992px) { // newer touchscreens
   .home-content {
-    position: relative;
+    position: fixed;
     left: 7.5%;
-    margin: 135% 0 -10%;
+    top: 76%;
     // min-height: 15em;
     float: left;
     z-index: 5;
