--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -23,10 +23,10 @@
 @media only screen and (max-width: 992px) {
   .hero-image {
     position: fixed;
-    top: 0;
+    top: -15%;
     left: 0;
-    width: 120%;
-    height: 100%;
+    width: 125%;
+    height: 115%;
     color: @colorWhite;
     background-size: 100%;
     box-shadow: none;
