--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -32,10 +32,10 @@
     box-shadow: none;
 
     .photo-loc {
-      position: absolute;
+      position: fixed;
       top: 0;
-      right: 20%;
-      .fontSansSerif2-0;
+      right: 10%;
+      .fontSansSerif3-0;
     }
   }
 }
