--- a/public/views/partials/heroes.html
+++ b/public/views/partials/heroes.html
@@ -4,6 +4,6 @@
   <span class="triangle-down hidden-phone" 
   			ng-click="broadcast($event, TO_CONTENT)"></span>
 	<h3 ng-if="states.mobile" class="photo-loc">
-		{{page.heroIageLocation}}
+		{{page.heroImageLocation}}
 	</h3>
 </div>
