--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -28,7 +28,9 @@
 
 @media only screen and (max-width: 900px) { // older iPhones
   .home-content {
-    margin: 115% 0 0;
+    position: fixed;
+    top: 70%;
+    margin: 0 0;
     font-size: 0.9em;
   }
 }
@@ -37,7 +39,7 @@
   .home-content {
     position: fixed;
     left: 7.5%;
-    top: 76%;
+    top: 74.5%;
     // min-height: 15em;
     float: left;
     z-index: 5;
@@ -55,15 +57,15 @@
     
     .tagline {
       position: relative;
-      top: -4.75em;
+      top: -4.65em;
       left: 0.2em;  
       .fontSansSerif4-5;
-      letter-spacing: -0.02em;
+      letter-spacing: 0.055em;
     }
     .menu {
       display: block;
       position: relative;
-      top: -1.388em;
+      top: -1.4em;
       left: 6.09em;
       margin: 0;
       padding: 1em;
