other screen sizes

--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -12,7 +12,7 @@
     .subtitle {
       a {
         position: relative;
-        top: 0;
+        top: -2.2em;
         left: 77.87%;
         float: left;
         clear: both;
@@ -79,11 +79,12 @@
 @media only screen and (min-width: 1599px) {
   .home-content {
     .title {
-      margin-bottom: 10em;
+      margin-bottom: 4em;
     }
-
-    .frame {
-      margin-bottom: 17.5em;
+    .subtitle {
+      a {
+        left: 74.1%;
+      }
     }
   }  
 }
