--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -3,9 +3,10 @@
   top: 0;
   left: 0;
   z-index: -10;
-  width: 100%;
-  min-height: 50em;
+  width: 110%;
+  min-height: 450px;
   background-size: 100%;
+  background-position: -100px 0px;
   box-shadow: 0em 0.5em 3.5em 0.5em @colorBlack;
 
   .triangle-down {
@@ -47,6 +48,6 @@
 }
 @media only screen and (min-width: 1599px) {
   .hero-image {
-    min-height: 70em;
+    min-height: 58em;
   }
 }
